# VideoAnalyser

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Makefile  README.md  build_output.txt  config.mk.example  plan.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  vcpkg-cache.yml
assets/: app.rc  resources.qrc
include/: aboutdialog.h  audiospectrogramwidget.h  audiowaveformwidget.h  avsyncchartwidget.h  bitratechartwidget.h  hexviewwidget.h  loganalysiswidget.h  mainwindow.h  mediainfowidget.h  packetdecoder.h  packetdetailwidget.h  packetlistmodel.h  packetreader.h  themeutils.h  timestampchartwidget.h
src/: aboutdialog.cpp  audiospectrogramwidget.cpp  audiowaveformwidget.cpp  avsyncchartwidget.cpp  bitratechartwidget.cpp  hexviewwidget.cpp  loganalysiswidget.cpp  main.cpp  mainwindow.cpp  mediainfowidget.cpp  packetdecoder.cpp  packetdetailwidget.cpp  packetlistmodel.cpp  packetreader.cpp  timestampchartwidget.cpp
tests/: CMakeLists.txt  test_aboutdialog.cpp  test_audiospectrogramwidget.cpp  test_audiowaveformwidget.cpp  test_avsyncchartwidget.cpp  test_bitratechartwidget.cpp  test_hexviewwidget.cpp  test_loganalysiswidget.cpp  test_main.cpp  test_mediainfowidget.cpp  test_packetdecoder.cpp  test_packetlistmodel.cpp  test_packetreader.cpp  test_timestampchartwidget.cpp  test_utils.cpp
tests/cmake/: copy_test_runtime.cmake
triplets/: arm64-osx-static.cmake  x64-linux-static.cmake  x64-mingw-static.cmake
